--- a/employees.html
+++ b/employees.html
@@ -58,18 +58,18 @@
 	</header><!-- End Header -->
 
 	<main class="container mt-4">
-		<div class="position_right">
-			<a class="edit_green_button" data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Add Employee</a>
+		<div class="hero">
+			<h2>Employees</h2>
+			<a data-toggle="modal" data-target="#feedback" role="button" href="#feedback">Add Employee</a>
 		</div>
 		<div class="pt-3">
 			<input type="text" placeholder="Type here to search for employees"
 				class="input-sm form-control" id="searchInput" onkeyup="searchList('employees-list')">
 		</div>
-		<div id="employeesSpace">
+		<div id="employeesSpace" class="mt-3">
 			<ul id="employees-list"></ul>
 		</div>
 	</main>
-
 
 	<div class="modal fade" id="feedback" tabindex="-1" role="dialog" aria-labelledby="feedack_CenterTitle" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
@@ -97,7 +97,6 @@
 			</div>
 		</div>
 	</div>
-
 
 	<footer class="my-footer d-flex justify-content-center align-items-center">
 		<div class="credits">
