CHangesd navbar 'home' to 'projects'

--- a/iem.html
+++ b/iem.html
@@ -39,7 +39,7 @@
     
           <nav id="navbar" class="navbar">
             <ul>
-              <li><a class="nav-link scrollto active" href="home.html">Home</a></li>
+              <li><a class="nav-link scrollto" href="home.html">Projects</a></li>
               <li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
 			    <li><a class="nav-link scrollto" href="viewUserProfile.html">User Profile</a></li>
 				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
