--- a/userProfile.html
+++ b/userProfile.html
@@ -41,7 +41,7 @@
 
 			<nav id="navbar" class="navbar">
 				<ul>
-				<li><a class="nav-link scrollto" href="index.html">Home</a></li>
+				<li><a class="nav-link scrollto" href="index.html">Projects</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
 				<li><a class="nav-link scrollto" href="viewUserProfile.html">User Profile</a></li>
 				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
