--- a/viewUserProfile.html
+++ b/viewUserProfile.html
@@ -42,7 +42,7 @@
 			</div>
 			<nav id="navbar" class="navbar">
 				<ul>
-				<li><a class="nav-link scrollto" href="home.html">Home</a></li>
+				<li><a class="nav-link scrollto" href="home.html">Projects</a></li>
 				<li><a class="nav-link scrollto" href="employees.html">Employees</a></li>
 				<li><a class="nav-link scrollto active" href="viewUserProfile.html">User Profile</a></li>
 				<li><a class="nav-link scrollto" href="viewOrganisationProfile.html">Company Profile</a></li>
