--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-analytics.js"></script>
-
+	
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,9 +15,13 @@
 		rel="stylesheet">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+	
 
 	<link rel="stylesheet" href="assets/css/main.css">
 	<!-- Vendor CSS Files -->
@@ -65,7 +69,17 @@
 			<input type="text" placeholder="Type here to search for projects"
 				class="input-sm form-control" id="searchInput" onkeyup="home_search()">
 		</div>
-		<table id="table" class="table table-hover p-table container mt-4" id="listOfProjects">
+		<br>
+		<div class="form-group"> 	<!--		Show Numbers Of Rows 		-->
+			<select class  ="form-control" name="state" id="maxRows">
+				<option value="5000">Show ALL</option>
+				
+				<option value="10">10</option>
+				
+			   </select>
+			
+		 </div>
+		<table  class="table table-hover p-table container mt-4" id="listOfProjects">
 			<thead>
 				<tr class="header">
 					<th>Project Name</th>
@@ -79,8 +93,27 @@
 			</tbody>
 
 		</table>
+		<div class='pagination-container' >
+			<nav>
+			  <ul class="pagination">
+		
+					<li data-page="prev" >
+											<span> < <span class="sr-only">(current)</span></span>
+											</li>
+						<!--	Here the JS Function Will Add the Rows -->
+				<li data-page="next" id="prev">
+											<span> > <span class="sr-only">(current)</span></span>
+											</li>
+			  </ul>
+			</nav>
+		</div>
+		<br>
 	</main>
+	
+	
+	
 
+	
 
 	<div class="modal fade" id="feedback" tabindex="-1" role="dialog" aria-labelledby="feedack_CenterTitle"
 		aria-hidden="true">
@@ -113,8 +146,8 @@
 		</div>
 	</div>
 	</div>
-
-
+<br>
+<br>
 	<footer class="my-footer d-flex justify-content-center align-items-center">
 		<div class="credits">
 			Designed by <a href="https://www.spectrumcs.co.bw/">Spectrum Analytics</a>
@@ -131,6 +164,7 @@
 	<script src="assets/js/firebaseConfig.js"></script>
 	<!-- Template Main JS File -->
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/pager.js"></script>
 	<!--Home scripts-->
 	<script src="assets/js/home_search.js"></script>
 
@@ -139,7 +173,6 @@
 	<script src="assets/js/jquery.min.js"></script>
 
 	<script src="assets/js/iem/util.js"></script>
-
 </body>
 
 </html>
